2008-04-14  Sébastien Sablé  <sable@users.sourceforge.net>

	* Support for extra paramstyle 'numeric'

	* Releasing version 0.39

2008-02-14  Sébastien Sablé  <sable@users.sourceforge.net>

	* Corrected "undefined symbol" date_datafmt for Sybase versions
	where CS_DATE_TYPE is not defined (as reported by Alexey Morsov)

2008-02-12  Sébastien Sablé  <sable@users.sourceforge.net>

	* Releasing version 0.39pre1

2008-01-18  Sébastien Sablé  <sable@users.sourceforge.net>

	* setup.py: Better detection of Sybase libraries

	* Sybase.py: Better thread safety

2008-01-04  Sébastien Sablé  <sable@users.sourceforge.net>

	* setup.py: the C API to datetime only exists since python 2.4 - disable datetime with previous versions

2007-10-19  Sébastien Sablé  <sable@users.sourceforge.net>

	* Corrected python long handling (using CS_NUMERIC instead of CS_LONG which is unspecified)

2007-10-18  Sébastien Sablé  <sable@users.sourceforge.net>

	* numeric.c: Handle engineer notation of numbers in numeric

2007-10-15  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Added destructor to Cursor

	* Sybase.py: backward compatibility - restored deprecated
	use_datetime attribut

	* setup.py: Sybase libraries do not have "_r64" at the end on OSF1

	* Use setuptools and distribute ez_setup.py

2007-10-08  Sébastien Sablé  <sable@users.sourceforge.net>

	* Restored datetime kwarg for backward compatibility

2007-09-28  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Corrected bug on ct_cursor with parameters

2007-09-27  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Completed input type mapping

2007-09-20  Sébastien Sablé  <sable@users.sourceforge.net>

	* Corrected various compilation warnings (some linked to python
	2.5)

	* Sybase.py: Added a prepare method to Cursor

2007-09-19  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Refactoring _cancel_cmd

	* Sybase.py: Corrected nextset after refactoring
